--- a/java/Makefile
+++ b/java/Makefile
@@ -1,5 +1,5 @@
-#LIB_PATH=/home/cs557-inst/local/lib/libthrift-0.13.0.jar:/home/cs557-inst/local/lib/slf4j-api-1.7.30.jar:/home/cs557-inst/loca/lib/slf4j-log4j12-1.7.12.jar:/home/cs557-inst/local/lib/javax.annotation-api-1.3.2.jar
-LIB_PATH=packages/libthrift-0.13.0.jar:packages/slf4j-api-1.7.30.jar:/home/cs557-inst/loca/lib/slf4j-log4j12-1.7.12.jar:packages/javax.annotation-api-1.3.2.jar
+LIB_PATH=/home/cs557-inst/local/lib/libthrift-0.13.0.jar:/home/cs557-inst/local/lib/slf4j-api-1.7.30.jar:/home/cs557-inst/loca/lib/slf4j-log4j12-1.7.12.jar:/home/cs557-inst/local/lib/javax.annotation-api-1.3.2.jar
+#LIB_PATH=packages/libthrift-0.13.0.jar:packages/slf4j-api-1.7.30.jar:/home/cs557-inst/loca/lib/slf4j-log4j12-1.7.12.jar:packages/javax.annotation-api-1.3.2.jar
 all: clean
 	mkdir bin
 	mkdir bin/client_classes
